- fix inline code spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -49,8 +49,8 @@ $on-laptop:        800px;
   white-space: pre;
 }
 
-.highlight,
-.highlighter-rouge {
+figure.highlight,
+.highlight .highlight {
   margin-right: 0
 }
 
